# databricks-ml-pipelines

./: .gitignore  README.md  TODO.md  databricks.yml  pyproject.toml
databricks/dev/: job.json  job.yml
databricks/prod/: bundle.yml
resources/: ml_pipeline.job.yml
src/ml_pipelines/: local_pipeline.py  mlflow_utils.py  pipeline.py  runner.py
src/ml_pipelines/conf/: config.yaml
src/ml_pipelines/conf/experiment/: dev.yaml  local.yaml  prod.yaml
src/ml_pipelines/conf/pipeline/: databricks-dev.yaml  databricks-prod.yaml  local.yaml
src/ml_pipelines/steps/: evaluate.py  feature_importance.py  finalize_pipeline.py  initialize_pipeline.py  model_qa.py  prepare_data.py  train.py
src/ml_pipelines/util/: databricks.py  delta_paths.py  mlflow.py  mlflow_datasets.py  runner.py  spark.py  task_store.py  task_values.py
